# rv32-emulator

./: .gitignore  Cargo.toml  README.md  build.rs  fs.img  install.sh  kernel.asm  uninstall.sh
c_test/: Makefile  build.sh  build_asm.sh  csrs.S  debug.c  debug.h  debug_config.h  debug_test.c  echo_out.c  fib.c  float_test.c  global.c  hello.c  jmp_test.S  mem.c  mtest.c  op_tests.c  print_out.S  printf.c  signal.c  size64test.c  spin.S  standard.c  string.c  test  test.asm  test.c  vaddr.c
src/: arg_parser.rs  cmd.rs  main.rs
src/devices/: clint.rs  mod.rs  plic.rs  uart.rs  viritio.rs
tests/: Makefile  custom_gl.c  custom_gl.h  test.c
