[package]
name = "rv32-emulator"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
clap = { version = "4.5.19", features = [ "derive" ] }
log = "0.4.22"

[build-dependencies]
clap = { version = "4.5.19", features = [ "derive" ] }
clap_complete = "4.5.32"

[dependencies.riscv-vm]
path = "riscv-vm"
features = ["logging"]
